# sentimencity

./: README.md  Trainer.py  analisys.py  bayes.py  example1.txt  noname.pickle  pippo  test.py  training_set.pickle
localpulse/: README.md  config.yml.example  docker-compose.yml  pyproject.toml
localpulse/.github/workflows/: ci.yml
localpulse/html_template/: base.html  city.html
localpulse/services/analysis_worker/: main.py
localpulse/services/ingest/: Dockerfile  main.py
localpulse/services/ingest/tests/: test_ingest.py
localpulse/services/metrics_builder/: main.py
localpulse/services/metrics_builder/tests/: test_metrics.py
localpulse/services/site_builder/: Dockerfile  main.py
localpulse/shared/: db.py  llm.py  models.py  schema.sql  utils.py
localpulse/shared/tests/: test_db.py  test_llm.py  test_utils.py
